@@ -3,6 +3,10 @@
 	* info-look.el (sh-mode): Look for coreutils new "Concept Index"
 	node.  Keep previous "Index" name to work with past coreutils too.
 
+	* man.el (man): Revise docstring a bit to show -a and -l as
+	examples.  Add -k description since support for it has otherwise
+	been a secret.  (Further to bug#3717.)
+
 2009-12-26  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp.el (tramp-handle-insert-directory): Quote "'" in the
